--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,22 @@
 cmake_minimum_required(VERSION 3.5)
-project(nettols LANGUAGES C)
+project(nettools LANGUAGES C)
 
 set(CMAKE_COMPILE_WARNING_AS_ERROR ON)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_C_STANDARD 17)
 
-include_directories(include)
+add_subdirectory(xsocket)
 
-# add_subdirectory(examples)
+add_library(${PROJECT_NAME} STATIC
+    src/nettools/nettools.c
+)
+target_include_directories(${PROJECT_NAME} PRIVATE
+    include
+    xsocket/include
+)
+target_link_libraries(${PROJECT_NAME}
+    xsocket
+)
+target_compile_options(${PROJECT_NAME} PRIVATE
+    -Wall
+)
