--- a/xsocket/CMakeLists.txt
+++ b/xsocket/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
-project(get-ext-ipv4-by-stun LANGUAGES C)
+project(xsocket LANGUAGES C)
 
 set(CMAKE_COMPILE_WARNING_AS_ERROR ON)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_C_STANDARD 17)
 
-add_executable(${PROJECT_NAME}
-    main.c
+add_library(${PROJECT_NAME} STATIC
+    src/xsocket/xsocket.c
 )
-target_link_libraries(${PROJECT_NAME}
-    nettools
+target_include_directories(${PROJECT_NAME} PRIVATE
+    include
 )
 target_compile_options(${PROJECT_NAME} PRIVATE
     -Wall
